--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,20 @@ margin: 5px;
     border-radius: 20px;
    
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-image: url("../images/Background_blue_purple.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px 0;
+    text-align: center;
+    color: white; /* Text color */
+  }
+
 .displaytext
 {
     margin-left: 30px;
@@ -31,3 +45,4 @@ margin: 5px;
     background: white;
     color: darkgray;
 }
+
