--- a/style/animationstyle.css
+++ b/style/animationstyle.css
@@ -80,6 +80,71 @@ body {
 .center-button button:hover {
     background-color: #0056b3;
 }
+/*The fireflies have moved to the bottom to better organise the code*/
+@keyframes animate {
+    0% {
+        transform: translateY(0) translateX(0) rotate(0deg);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-800px) translateX(800px) rotate(360deg);
+        opacity: 0;
+    }
+}
+
+/*Camera lense!!*/
+.camera-lens {
+    width: 30px;
+    height: 30px;
+    padding: 10px;
+    margin-bottom: 5px;
+    border: 2px solid #191818d4;
+    background-color: #191818d4;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.lens-inner {
+    width: 20px;
+    height: 20px;
+    background: #333;
+    border: 3px solid rgb(159, 8, 8);
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    margin-bottom: 20px;
+}
+
+.red-dot {
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: fade-in-out 2s ease-in-out infinite;
+    opacity: 0; /* Start with the dot hidden */
+    z-index: 1;
+}
+
+
+@keyframes fade-in-out {
+    0%, 100% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+}
 
 .boxes {
     background: linear-gradient(to top,  #0f2556 0%, #1f53c3 50%,#0f2556 100%);
@@ -160,75 +225,209 @@ body {
 
 .fire-fly li:nth-child(7) {
     left: 75%;
-    width: 20px;
-    height: 20px;
+    width: 8px;
+    height: 8px;
     animation-delay: 12s;  
+    bottom: 0;
+}
+
+.fire-fly li:nth-child(8) {
+    left: 11%;
+    width: 8px;
+    height: 8px;
+    animation-delay: 2s;  
+    bottom: 0;
+}
+
+.fire-fly li:nth-child(9) {
+    left: 22%;
+    width: 8px;
+    height: 8px;
+    animation-delay: 1s;  
+    bottom: 0;
+}
+
+.fire-fly li:nth-child(10) {
+    left: 99%;
+    width: 8px;
+    height: 8px;
+    animation-delay: 12s;  
+    bottom: 0;
+}
+
+.fire-fly li:nth-child(11) {
+    left: 54%;
+    width: 8px;
+    height: 8px;
+    animation-delay: 8s;  
+    bottom: 0;
+}
+
+.fire-fly li:nth-child(12) {
+    left: 15%;
+    width: 10px;
+    height: 10px;
+    animation-delay: 6s;  
+    bottom: 0;
+}
+
+.fire-fly li:nth-child(13) {
+    left: 43%;
+    width: 10px;
+    height: 10px;
+    animation-delay: 4s;  
+    bottom: 0;
+}
+
+.fire-fly li:nth-child(14) {
+    left: 76%;
+    width: 10px;
+    height: 10px;
+    animation-delay: 2s;  
+    bottom: 0;
+}
+
+/*MORE FIREFLIES!!!*/
+.boxes2 {
+    background: linear-gradient(to top,  #0f2556 0%, #1f53c3 50%,#0f2556 100%);
+    width: 100%;
+    height: 100vh;
+}
+
+.fire-fly2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.fire-fly2 li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 5px;
+    height: 5px;
+    background: rgba(0, 157, 255, 0.476);
+    animation: animate 10s linear infinite;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 238, 255, 0.546);
+}
+
+.fire-fly2 li:nth-child(1) {
+    left: 80%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 0s;
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(2) {
+    left: 19%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 2s;  
+    animation-duration: 10s;
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(3) {
+    left: 32%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 4s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(4) {
+    left: 48%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 6s;  
+    animation-duration: 15s;
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(5) {
+    left: 72%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 8s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(6) {
+    left: 5%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 10s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(7) {
+    left: 89%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 3s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(8) {
+    left: 11%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 2s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(9) {
+    left: 22%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 1s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(10) {
+    left: 99%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 12s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(11) {
+    left: 54%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 8s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(12) {
+    left: 15%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 6s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(13) {
+    left: 43%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 4s;  
+    bottom: 0;
+}
+
+.fire-fly2 li:nth-child(14) {
+    left: 76%;
+    width: 5px;
+    height: 5px;
+    animation-delay: 2s;  
     bottom: 0;
 }
 
 
 
-@keyframes animate {
-    0% {
-        transform: translateY(0) translateX(0) rotate(0deg);
-        opacity: 1;
-    }
-    100% {
-        transform: translateY(-800px) translateX(800px) rotate(360deg);
-        opacity: 0;
-    }
-}
-
-/*Camera lense!!*/
-.camera-lens {
-    width: 30px;
-    height: 30px;
-    padding: 10px;
-    margin-bottom: 5px;
-    border: 2px solid #191818d4;
-    background-color: #191818d4;
-    border-radius: 50%;
-    position: absolute;
-    bottom: 80%;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-}
-
-.lens-inner {
-    width: 20px;
-    height: 20px;
-    background: #333;
-    border: 3px solid rgb(159, 8, 8);
-    border-radius: 50%;
-    position: absolute;
-    z-index: 1;
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%);
-    margin-bottom: 20px;
-}
-
-.red-dot {
-    width: 10px;
-    height: 10px;
-    background-color: red;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    animation: fade-in-out 2s ease-in-out infinite;
-    opacity: 0; /* Start with the dot hidden */
-    z-index: 1;
-}
-
-
-@keyframes fade-in-out {
-    0%, 100% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-}
