--- a/style/style.css
+++ b/style/style.css
@@ -46,3 +46,14 @@ margin: 5px;
     color: darkgray;
 }
 
+/*Login and registration*/
+
+.loginform {
+    width: 300px;
+    margin-left: 40%;
+    margin-top: 30px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
+    padding: 20px;
+}
