--- a/style/style.css
+++ b/style/style.css
@@ -58,3 +58,9 @@ margin: 5px;
     padding: 20px;
 }
 
+.plusminus {
+    text-decoration: none;
+    color: #333; 
+    font-weight: bold;
+    margin: 0 5px; 
+}
