--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,28 @@ margin: 5px;
     border: 1px white;
     border-radius: 20px;
 }
+
+.card {
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.card-img-top {
+    max-width: 100%; 
+    max-height: 200px; 
+    object-fit: cover; 
+}
+
+.image-container {
+    height: 200px; /* Fixed height for the container */
+    overflow: hidden; /* Hide overflow to maintain container size */
+}
+
+.image-container img {
+    width: 100%; /* Set width to fill the container */
+    height: auto; /* Allow image to adjust its height proportionally */
+    object-fit: cover; /* Maintain aspect ratio while covering the container */
+}
 .badge
 {
     margin-left: -47px;
