--- a/style/style.css
+++ b/style/style.css
@@ -149,3 +149,35 @@ margin: 5px;
     width: 100%;
     padding-bottom: 30px;
   }
+
+  /*----------------------------Order card--------------------*/
+  .order-card {
+    background-color: #f3f3f3; /* Light grey background */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Drop shadow */
+    padding: 20px;
+    border-radius: 8px;
+    margin: 20px 0; /* Adjust margin as needed */
+}
+
+.order-card h2 {
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+
+.order-card p {
+    margin-bottom: 10px;
+}
+
+.order-card table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.order-card th, .order-card td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+.order-card th {
+    background-color: #f1f1f1;
+}
